# stock-evaluator

./: .gitignore  LICENSE  README.md  README.rst  package.sh  pyproject.toml  requirements.txt  tickers.12.8.21.csv  tickers_small.csv
stock_evaluator/: stock_evaluator.py
tests/: test_stock_evaluator.py
