[tool.poetry]
name = "stock-evaluator"
version = "0.1.0"
description = ""
authors = ["smliang <sarah.liang99@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
yahoo-fin = "^0.8.9"
numpy-financial = "^1.0.0"
stopit = "^1.1.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
